# lingmo-update

./: CMakeLists.txt  main.cpp  updatorhelper.cpp
.github/workflows/: build.yml  package.yml
debian/: changelog  control  copyright
rpm/: lingmo-update.spec
